[project]
name = "pilot-rag"
version = "0.1.0"
description = "Automotive RAG Document Assistant"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "PyPDF2>=3.0.1",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "pycryptodome>=3.23.0",
]
